# pavo-ai-agent

./: .dockerignore  .env.example  .gitignore  FINAL_REPORT.md  README.md  README_EN.md  docker-compose.yml  pyproject.toml  railway.json
backend/: .coveragerc  Dockerfile  alembic.ini  pytest.ini  requirements-dev.txt  requirements.txt  verify.py
docs/: Pavo AI Agent MCP Server 零依赖改造代码审查报告.md  Pavo AI Agent MCP Server 零依赖改造开发计划 v2.0.md  Pavo AI Agent MCP Server 零依赖改造技术开发文档.md  Pavo AI Agent MCP Server 零依赖改造技术开发文档_v1.1.md  Pavo AI Agent MCP Server 零依赖改造技术开发文档_v1.2.md  Pavo AI Agent MCP Server 零依赖改造技术开发文档_v1.3.md  Pavo AI Agent MCP Server 零依赖改造方案.md  Pavo AI Agent — Memory + RAG 技术开发计划文档 v2.1 审核报告.md  Pavo AI Agent — Memory + RAG 技术开发计划文档 v2.2 审核报告.md  Pavo AI Agent — 技术委员会评审报告 v6 修改意见书.md  Pavo AI Agent — 技术架构演进方案.md  Pavo AI Agent 项目审核综合报告.md  Pavo AI Agent 项目综合审核报告_v2.md  Pavo-AI-Agent-MCP-Server-Development-Plan-v1.0.md  project-analysis.md  technical-architecture-report.md  technical-documentation-en.md  technical-documentation.md  user-guide-en.md  user-guide.md  v2.3_review_report.md  v2.3_test_report.md  技术债务解决方案报告.md  技术委员会评审报告_v6_修正版.md  技术开发文档.md  技术开发文档审核报告.md  技术开发计划文档_v2.0_MCP Server层.md  技术开发计划文档_v2.1.md  技术开发计划文档_v2.2.md  技术开发计划文档_v2.3.md  技术开发计划文档_v5.md  推广文章-CSDN.md  推广文章-知乎.md  项目测试与审查报告.md
frontend/: PAVO_FRONTEND_DEV_PLAN.md  PAVO_FRONTEND_REDESIGN_TECH_DOC.md  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
scripts/: _check.py  audit_v23.py  fix_guards.py  gen_doc.py  gen_doc_final.py  gen_doc_v2.py  p2.py  (+10 more)
(+112 files in other folders)
